# monorepo-template

./: .pre-commit-config.yaml  README.md  cookiecutter.json
.claude/: settings-local-json.md
.github/workflows/: test-template.yml
docs/: deployment.md  development.md  project-types.md
hooks/: post_gen_project.py  pre_gen_project.py
scripts/: test-template-generation.py
{{cookiecutter.project_slug}}/: .gitignore  BUILD  Makefile  README.md  docker-compose.yml  package.json  pants.toml  pyproject.toml  pyrightconfig.json  ruff.toml
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
{{cookiecutter.project_slug}}/.monorepo/: README.md  project-templates.yaml
{{cookiecutter.project_slug}}/apps/web/: BUILD  Package.json
{{cookiecutter.project_slug}}/models/main-model/: BUILD
{{cookiecutter.project_slug}}/scripts/: add-project.py  deploy.py  setup.py
{{cookiecutter.project_slug}}/services/main/: BUILD  Dockerfile
{{cookiecutter.project_slug}}/services/main/src/{{cookiecutter.project_slug}}/main/: api.py
