# {{cookiecutter.project_name}} - Workspace Configuration
# This file coordinates all packages in the monorepo
# Individual projects have their own pyproject.toml files

[project]
name = "{{cookiecutter.project_slug}}-workspace"
version = "0.1.0"
description = "{{cookiecutter.project_description}}"
requires-python = ">={{cookiecutter.python_version}}"

# Workspace-level dev dependencies
# All workspace members inherit these tools automatically
[project.optional-dependencies]
dev = [
    "ruff>=0.7.0",
    "pyright>=1.1.350",
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
]

[tool.uv.workspace]
members = [
    "apps/*",
    "services/*",
    "data-pipelines/*",
    "packages/*",
]

# Workspace-wide dependency version constraints
# These override individual package versions to ensure consistency across workspace members
# Policy: Keep all shared dependencies on same version unless there's a specific reason
[tool.uv]
override-dependencies = [
    # Add shared dependency constraints here as your monorepo grows
    # Example:
    # "fastapi>=0.115.0,<1.0",
    # "sqlalchemy>=2.0.36,<3.0",
    # "pydantic>=2.9.0,<3.0",
]

# Common tool settings shared across all workspace members
[tool.ruff]
line-length = 120
target-version = "py{{cookiecutter.python_version|replace('.', '')}}"

[tool.ruff.lint]
select = ["E", "F", "I"]  # pycodestyle errors, pyflakes, isort
ignore = []

[tool.ruff.format]
quote-style = "double"

# Common pyright settings for all workspace members
# Individual projects can override or extend these
[tool.pyright]
pythonVersion = "{{cookiecutter.python_version}}"
typeCheckingMode = "standard"
reportMissingImports = true
reportMissingTypeStubs = false
